--- a/src/assets/styles/sass/_variables.scss
+++ b/src/assets/styles/sass/_variables.scss
@@ -130,10 +130,10 @@ $break-point-g-em: $break-point-g-em-val em;
 $break-point-g: $break-point-g-em;
 
 // For break point shorthands
-$BPA: $break-point-a;
-$BPB: $break-point-b;
-$BPC: $break-point-c;
-$BPD: $break-point-d;
-$BPE: $break-point-e;
-$BPF: $break-point-f;
-$BPG: $break-point-g;
+$BPA: "(min-width:" $break-point-a")";
+$BPB: "(min-width:" $break-point-b")";
+$BPC: "(min-width:" $break-point-c")";
+$BPD: "(min-width:" $break-point-d")";
+$BPE: "(min-width:" $break-point-e")";
+$BPF: "(min-width:" $break-point-f")";
+$BPG: "(min-width:" $break-point-g")";
