--- a/src/assets/styles/sass/order.scss
+++ b/src/assets/styles/sass/order.scss
@@ -1,7 +1,15 @@
 
 @import '_mixins';
-@import '_reset';
+//@import '_reset';
+@import '_normalize';
 @import '_variables';
+@import 'fonts';
+
+@import 'demo-pages';
 
 @import 'global';
 @import 'layout';
+@import 'type';
+@import 'list';
+@import 'forms';
+@import 'buttons';
