--- a/src/assets/styles/sass/order.scss
+++ b/src/assets/styles/sass/order.scss
@@ -6,6 +6,7 @@
 @import 'fonts';
 
 @import 'demo-pages';
+@import 'monitor-mq';
 
 @import 'global';
 @import 'layout';
@@ -16,3 +17,5 @@
 @import 'header';
 @import 'icons';
 @import 'introduction';
+@import 'tabs';
+@import 'skills';
