--- a/src/assets/styles/sass/header.scss
+++ b/src/assets/styles/sass/header.scss
@@ -5,72 +5,119 @@
 }
 
 .header-inner {
-    max-width: $max-width;
-    margin: 0 auto;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    padding: $vr*4 0;
+    display: block;
+    position: relative;
+    padding-top: $vr*4;
+    padding-bottom: $vr*3;
 
-    .no-flexbox & {
-        display: table;
-        width: 100%;
+    @media #{$BPD} {
+        max-width: $max-width;
+        margin: 0 auto;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        padding: $vr*4 0;
+
+        .no-flexbox & {
+            display: table;
+            width: 100%;
+        }
     }
 }
 
+
 .header-logo {
     position: relative;
-    margin: 0 $ggw*5;
 
-    .no-flexbox & {
-        display: table-cell;
-        text-align: center;
-        width: 50%;
-    }
+    @media #{$BPD} {
+        margin: 0 $ggw*5;
 
-    &:before,
-    &:after {
-        content: '';
-        position: absolute;
-        top: 50%;
-        transform: translateY(-50%);
-        width: $ggw*3;
-        height: 1px;
-        background-color: $brand-color-a;
-    }
+        .no-flexbox & {
+            display: table-cell;
+            text-align: center;
+            width: 50%;
+        }
 
-    &:before {
-        left: 100%;
-    }
+        &:before,
+        &:after {
+            content: '';
+            position: absolute;
+            top: 50%;
+            transform: translateY(-50%);
+            width: $ggw*3;
+            height: 1px;
+            background-color: $brand-color-a;
+        }
 
-    &:after {
-        right: 100%;
+        &:before {
+            left: 100%;
+        }
+
+        &:after {
+            right: 100%;
+        }
     }
 
     .logo {
-        margin: 0 $ggw;
-        text-transform: uppercase;
+        text-align: center;
         font-size: 24px;
-        line-height: $vr*4;
-        letter-spacing: 10px;
+        line-height: $vr*6;
+        text-transform: uppercase;
+        //letter-spacing: 10px;
         padding-left: 10px;
+        transform: scale(0.6);
+        opacity: 0;
+        transition: all 1200ms ease;
+        transition-delay: 250ms;
+
+        .page-loaded & {
+            letter-spacing: 10px;
+            transform: scale(1);
+            opacity: 1;
+        }
+
+        @media #{$BPD} {
+            margin: 0 $ggw;
+        }
     }
 }
 
 .header-actions {
-    margin: 0 $ggw;
+    display: flex;
+    justify-content: space-around;
+    position: absolute;
+    top: 100%;
+    width: 50%;
+    margin: 0;
 
-    .no-flexbox & {
-        display: table-cell;
+    @media #{$BPD} {
+        position: relative;
+        margin: 0 $ggw;
+        top: auto;
+        width: auto;
+
+        .no-flexbox & {
+            display: table-cell;
+        }
     }
 }
 
 .header-actions-left {
-    text-align: left;
+    left: 0;
+
+    @media #{$BPD} {
+        left: auto;
+        text-align: left;
+    }
 }
 
 .header-actions-right {
-    text-align: right;
+    right: 0;
+
+    @media #{$BPD} {
+        right: auto;
+        text-align: right;
+    }
 }
 
 .header-action-link {
@@ -78,6 +125,11 @@
     color: $color-text;
     font-size: 30px;
     margin: 0 10px;
+    transition: transform 150ms ease-in-out;
+
+    &:hover {
+        transform: scale(1.2) rotate(-15deg);
+    }
 
     .icon {
     }
