--- a/css/style.css
+++ b/css/style.css
@@ -387,7 +387,7 @@ th {
 
 html {
   font-size: 100%;
-  background: #FFF;
+  background: #f7f7f7;
   -webkit-overflow-scrolling: touch;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale; }
@@ -400,10 +400,13 @@ body {
   color: #333;
   font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
   font-weight: 400;
-  line-height: 24px; }
+  line-height: 1.5rem; }
 
 img {
   -ms-interpolation-mode: bicubic; }
+
+a {
+  text-decoration: none; }
 
 .scroll-measure {
   height: 40px;
@@ -423,8 +426,8 @@ img {
 
 .title-stylesheet {
   border-bottom: 1px solid #CCC;
-  font-size: 40px;
-  line-height: 30px;
+  font-size: 2.5rem;
+  line-height: 1.875rem;
   margin-bottom: 12px;
   padding-top: 36px;
   padding-bottom: 12px;
@@ -435,8 +438,8 @@ img {
 .subtitle-stylesheet {
   border-bottom: 1px solid #CCC;
   color: #BBB;
-  font-size: 18px;
-  line-height: 24px;
+  font-size: 1.125rem;
+  line-height: 1.5rem;
   margin-bottom: 24px;
   padding-top: 36px;
   padding-bottom: 12px;
@@ -446,7 +449,7 @@ img {
 
 .codeblock-stylesheet {
   border: 1px solid #CCC;
-  font-size: 12px;
+  font-size: 0.75rem;
   margin: 0 0 24px;
   padding: 6px 12px; }
 
@@ -460,6 +463,8 @@ textarea {
   position: relative;
   padding: 0; }
   .select-replace select {
+    -webkit-appearance: none;
+    -moz-appearance: none;
     appearance: none;
     background: none;
     border: 0;
@@ -475,6 +480,7 @@ button {
   cursor: pointer; }
 
 input[type='search'] {
+  -moz-appearance: none;
   appearance: none;
   -webkit-appearance: none; }
   input[type='search']::-webkit-search-decoration, input[type='search']::-webkit-search-cancel-button, input[type='search']::-webkit-search-results-button, input[type='search']::-webkit-search-results-decoration {
@@ -494,6 +500,8 @@ input[type='number'],
 input[type='search'],
 input[type='password'],
 textarea {
+  -webkit-appearance: none;
+  -moz-appearance: none;
   appearance: none; }
 
 label input,
@@ -516,6 +524,8 @@ textarea {
   padding: 0;
   position: relative; }
   .select-replace select {
+    -webkit-appearance: none;
+    -moz-appearance: none;
     appearance: none;
     background: none;
     border: 0;
@@ -540,9 +550,9 @@ input[type='checkbox'] {
 
 .radio,
 .checkbox {
-  font-size: 12px;
+  font-size: 0.75rem;
   display: block;
-  line-height: 18px;
+  line-height: 1.125rem;
   margin-bottom: 6px;
   padding-top: 12px;
   padding-left: 25px;
@@ -550,8 +560,8 @@ input[type='checkbox'] {
   @media (min-width: 61.25em) {
     .radio,
     .checkbox {
-      font-size: 16px;
-      line-height: 30px;
+      font-size: 1rem;
+      line-height: 1.875rem;
       padding-top: 6px; } }
   @media (min-width: 48em) {
     .radio:first-child,
@@ -574,7 +584,7 @@ input[type='checkbox'] {
   .checkbox.radio-style-a,
   .checkbox.radio-style-b {
     background-color: #EBEBEB;
-    font-size: 14px;
+    font-size: 0.875rem;
     font-weight: 600;
     line-height: normal;
     margin-top: 0;
@@ -632,6 +642,8 @@ input[type='checkbox'] {
 .radio-replace {
   height: 24px;
   width: 24px;
+  -webkit-appearance: none;
+  -moz-appearance: none;
   appearance: none;
   background-color: transparent;
   border: 2px solid #639DAC;
@@ -683,7 +695,7 @@ input[type='checkbox'] {
     height: 100%;
     line-height: 100%;
     text-align: center;
-    font-size: 16px;
+    font-size: 1rem;
     content: "\2714";
     display: none; }
   input:checked + .checkbox-replace {
@@ -750,7 +762,9 @@ input[type='file'] {
 
 .main {
   overflow: hidden;
-  position: relative; }
+  position: relative;
+  float: left;
+  width: 100%; }
 
 .layout {
   margin: 0 20px;
@@ -822,7 +836,8 @@ input[type='file'] {
   .region-a .block--size-c {
     width: 31.66667%; } }
 
-.list-unstyled {
+.list-unstyled, .primary-navigation ul,
+.utility-navigation ul {
   list-style: none;
   margin: 0;
   padding: 0; }
@@ -837,54 +852,61 @@ input[type='file'] {
     margin: 0;
     padding: 0; }
 
-h1 a,
-h2 a,
-h3 a,
-h4 a,
-h5 a,
-h6 a {
-  text-decoration: none; }
+h1,
+h2,
+h3,
+h4,
+h5,
+h6 {
+  margin-top: 0; }
+  h1 a,
+  h2 a,
+  h3 a,
+  h4 a,
+  h5 a,
+  h6 a {
+    text-decoration: none; }
 
 h1,
 .h1,
 .giga {
-  font-size: 60px;
-  line-height: 60px;
+  font-size: 3.75rem;
+  line-height: 3.75rem;
   margin-bottom: 12px; }
 
 h2,
 .h2,
 .mega {
-  font-size: 36px;
-  line-height: 36px;
+  font-size: 2.25rem;
+  line-height: 2.25rem;
   margin-bottom: 12px; }
 
 h3,
 .h3,
 .alpha {
-  font-size: 30px;
-  line-height: 30px;
+  font-size: 1.875rem;
+  line-height: 1.875rem;
   margin-bottom: 6px; }
 
 h4,
 .h4,
 .beta {
-  font-size: 24px;
-  line-height: 24px;
+  font-size: 1.5rem;
+  line-height: 1.5rem;
   margin-bottom: 12px; }
 
 h5,
 .h5,
 .gamma {
-  font-size: 18px;
-  line-height: 18px;
+  font-size: 1.125rem;
+  line-height: 1.125rem;
   margin-bottom: 12px; }
 
 h6,
 .h6,
 .delta {
-  font-size: 16px;
-  line-height: 18px;
+  font-size: 1rem;
+  line-height: 1.125rem;
   margin-bottom: 12px; }
 
 p {
@@ -908,9 +930,9 @@ button::-moz-focus-inner {
   cursor: pointer;
   display: inline-block;
   font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
-  font-size: 12px;
+  font-size: 0.75rem;
   font-weight: 700;
-  line-height: 20px;
+  line-height: 1.25rem;
   margin-bottom: 0;
   min-height: 32px;
   padding: 6px 15px;
@@ -923,8 +945,8 @@ button::-moz-focus-inner {
   -webkit-font-smoothing: antialiased; }
   @media (min-width: 48em) {
     .btn {
-      font-size: 16px;
-      line-height: 20px;
+      font-size: 1rem;
+      line-height: 1.25rem;
       min-height: 44px;
       padding: 12px 20px; } }
   .btn:hover, .btn:focus {
@@ -942,26 +964,26 @@ button::-moz-focus-inner {
     pointer-events: none; }
 
 .btn-small {
-  font-size: 12px;
-  line-height: 20px;
+  font-size: 0.75rem;
+  line-height: 1.25rem;
   min-height: 32px;
   padding: 6px 15px; }
   @media (min-width: 48em) {
     .btn-small {
-      font-size: 12px;
-      line-height: 20px;
+      font-size: 0.75rem;
+      line-height: 1.25rem;
       min-height: 32px;
       padding: 6px 15px; } }
 
 .btn-large {
-  font-size: 16px;
-  line-height: 20px;
+  font-size: 1rem;
+  line-height: 1.25rem;
   min-height: 44px;
   padding: 12px 20px; }
   @media (min-width: 48em) {
     .btn-large {
-      font-size: 18px;
-      line-height: 38px;
+      font-size: 1.125rem;
+      line-height: 2.375rem;
       min-height: 62px;
       padding: 12px 30px; } }
 
@@ -1017,6 +1039,47 @@ button::-moz-focus-inner {
     background: none;
     border: none; }
 
+.header {
+  float: left;
+  width: 100%;
+  padding: 24px 10px; }
+  @media (min-width: 37.5em) {
+    .header {
+      padding: 24px 20px; } }
+
+.primary-navigation,
+.utility-navigation {
+  float: left;
+  width: 100%;
+  text-align: center; }
+  @media (min-width: 37.5em) {
+    .primary-navigation,
+    .utility-navigation {
+      width: auto;
+      text-align: left; } }
+  .primary-navigation li,
+  .utility-navigation li {
+    display: inline-block;
+    margin: 0 10px; }
+  .primary-navigation a,
+  .utility-navigation a {
+    color: #404040;
+    text-transform: lowercase; }
+
+.utility-navigation {
+  margin-bottom: 6px; }
+  @media (min-width: 37.5em) {
+    .utility-navigation {
+      margin-bottom: 0;
+      float: right; } }
+
+.footer {
+  float: left;
+  width: 100%;
+  text-align: center;
+  font-size: 0.875rem;
+  padding: 6px 20px; }
+
 .hidden {
   display: none !important;
   visibility: hidden; }
@@ -1032,7 +1095,7 @@ button::-moz-focus-inner {
   .clearfix:after {
     clear: both; }
 
-.visually-hidden {
+.visually-hidden, .header-logo {
   border: 0;
   clip: rect(0 0 0 0);
   height: 1px;
@@ -1041,7 +1104,7 @@ button::-moz-focus-inner {
   padding: 0;
   position: absolute;
   width: 1px; }
-  .visually-hidden.focusable:active, .visually-hidden.focusable:focus {
+  .visually-hidden.focusable:active, .focusable.header-logo:active, .visually-hidden.focusable:focus, .focusable.header-logo:focus {
     clip: auto;
     height: auto;
     margin: 0;
