--- a/sass/_settings/_variables.scss
+++ b/sass/_settings/_variables.scss
@@ -7,10 +7,10 @@ $brand-color-c: #4CAF50;
 $brand-color-d: #F44336;
 
 // Secondary Palette
-$brand-color-e: #434041;
+$brand-color-e: #404040;
 $brand-color-f: #747172;
 $brand-color-g: #AEADAD;
-$brand-color-h: #D7D6D6;
+$brand-color-h: #f7f7f7;
 
 // Aliases
 $color-text: #333;
