adding some basic markup and styling for landing page

--- a/app/home/home.component.html
+++ b/app/home/home.component.html
@@ -1,1 +1,13 @@
-<h2>Home</h2>
+
+<article class="intro block block-size-a">
+    <div class="intro-inner">
+        <header class="intro-header">
+            <h2 class="intro-title">Andy<br>Blackledge</h2>
+        </header>
+        <div class="intro-body">
+            <p>
+                Front End Developer / Manchester / Building Blocks
+            </p>
+        </div>
+    </div>
+</article>
