--- a/sass/style.scss
+++ b/sass/style.scss
@@ -21,6 +21,7 @@
 @import 'components/buttons';
 @import 'components/header';
 @import 'components/footer';
+@import 'components/intro';
 
 // Helpers
 @import 'utilities/utilities';
